<resources>
    <string name="app_name">LoginAssignment</string>
    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="UsenameTextField">Enter User Name</string>
    <string name="PasswordTextField">Enter Password</string>
    <string name="LastNameText">Last Name :</string>
    <string name="EmailText">Email :</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Register</string>
    <string name="register">Please Register UserName</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name :</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_text">User Login</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>

    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="error_message">Please fill all fields</string>
    <string name="user_doesnt_exist">User doesn\'t exist, please Register!</string>
    <string name="check_password">Please check your Password</string>
    <string name="already_exist">UserName Already taken</string>

    <string name="character_detail">Character Detail</string>
    <string name="character_list">List of Character</string>

</resources>
