<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.loginassignment.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_entrytype"
            style="@style/HintTextStyle"
            android:text="@string/Login_text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_userName_layout"
            style="@style/TextInputLayoutStyle"
            android:focusable="false"
            android:hint="@string/UsenameTextField"
            android:textColorHint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_entrytype">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_input_userName_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={loginViewModel.getUsername}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_Password_layout"
            style="@style/TextInputLayoutStyle"
            android:focusable="false"
            android:hint="@string/PasswordTextField"
            android:textColorHint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_userName_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={loginViewModel.getPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@color/white"
            android:backgroundTint="@color/pacificBlue"
            android:onClick="@{(v)->loginViewModel.onClick(v)}"
            android:text="@string/Login_button"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_Password_layout" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@color/white"
            android:backgroundTint="@color/pacificBlue"
            android:onClick="@{(v)->loginViewModel.onClick(v)}"
            android:text="@string/submitButton"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_Password_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
